Upgrade to Java 17
Sonarqube requires Java 17 for both server and scanner side, so the
plugin no longer needs to support Java 11. The build has therefore been
upgraded to use Java 17, and Java 17 features used where possible.
Includes the removal of the Reflective Classloaders since they use
deprecated functionality and were never used.